--- a/PushySquares/Base.lproj/Main.storyboard
+++ b/PushySquares/Base.lproj/Main.storyboard
@@ -139,10 +139,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="b5E-D8-iFG">
-                                <rect key="frame" x="0.0" y="226" width="320" height="326"/>
+                                <rect key="frame" x="0.0" y="178" width="320" height="374"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hwu-ku-f6x" customClass="PressableButton" customModule="SwiftyButton">
-                                        <rect key="frame" x="10" y="0.0" width="300" height="74"/>
+                                        <rect key="frame" x="10" y="0.0" width="300" height="86"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="300" id="JSt-dG-BKh"/>
                                             <constraint firstAttribute="height" constant="61" id="iyX-b7-1lX">
@@ -163,7 +163,7 @@
                                         </variation>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XdR-qt-Jp4" customClass="PressableButton" customModule="SwiftyButton">
-                                        <rect key="frame" x="10" y="84" width="300" height="74"/>
+                                        <rect key="frame" x="10" y="96" width="300" height="86"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="61" id="UsN-El-mEF">
                                                 <variation key="heightClass=regular" constant="70"/>
@@ -184,7 +184,7 @@
                                         </variation>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1uS-ys-9WZ" customClass="PressableButton" customModule="SwiftyButton">
-                                        <rect key="frame" x="10" y="168" width="300" height="74"/>
+                                        <rect key="frame" x="10" y="192" width="300" height="86"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="61" id="CTr-pl-kcB">
                                                 <variation key="heightClass=regular" constant="70"/>
@@ -205,7 +205,7 @@
                                         </variation>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4KV-xc-N4b" customClass="PressableButton" customModule="SwiftyButton">
-                                        <rect key="frame" x="10" y="252" width="300" height="74"/>
+                                        <rect key="frame" x="10" y="288" width="300" height="86"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="300" id="fPP-r2-cZj"/>
                                             <constraint firstAttribute="height" constant="61" id="t7W-yw-oDY">
@@ -228,7 +228,7 @@
                                 </subviews>
                             </stackView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="250" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="iwK-IP-Ywa">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="218"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="170"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="RqA-2T-z4d"/>
@@ -574,7 +574,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jgj-nb-LDm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1508.6956521739132" y="795.53571428571422"/>
+            <point key="canvasLocation" x="1507.5" y="795.42253521126759"/>
         </scene>
         <!--Help View Controller-->
         <scene sceneID="7Z8-gH-yjh">
